conference and new entity script
