# src/data/entities/Conference.ts
@@ -1,8 +1,17 @@
-import { uuid } from "controllers/utilities/Types";
-import { Entity, PrimaryGeneratedColumn } from "typeorm";
+import { integer, uuid } from "controllers/utilities/Types"
+import { Column, Entity, PrimaryGeneratedColumn } from "typeorm"
 
 @Entity()
 export class Conference {
-  @PrimaryGeneratedColumn("uuid")
-  id: uuid;
+    @PrimaryGeneratedColumn("uuid")
+    id: uuid
+
+    @Column("integer")
+    sourceId: integer
+
+    @Column()
+    name: string
+
+    @Column()
+    active: boolean
 }
